this is a wonder project

--- a/index.html
+++ b/index.html
@@ -4,9 +4,110 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>This is my First Project</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" >
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <!-- <h1>This is a heading</h1> -->
+    
+<nav>
+    <div class="manu-container">
+        <div class="logo">
+       <h2 > <i class="fa-solid fa-house"></i> My Website <i class="fa-solid fa-heart"></i></h2>
+        </div>
+        <div class="manus">
+            <ul>
+                <li class="item">Home </li>
+                <li class="item">About  </li>
+                <li class="item">Phone </li>
+                <li class="item">Survices </li>
+                <li class="item">Contact </li>
+            </ul>
+        </div>
+    </div>
+</nav>
+<header>
+<section>
+    <div class="banar-container">
+        <div class="banar-test">
+       <h1>Better design for <br> your  digital products</h1>
+       <p>Ee are a creative studio spectalizing in UI/UX design, development and strategy.</p>
+       <button class="btn">Explore More</button>
+        </div>
+        <div class="banar-img">
+       <img class="banar-photo" src="img/ovi-img.jpg" alt="">
+        </div>
+    </div>
+</section>
+    </header>
+    <main>
+  <section>
+    <h1 class="About-title">About us</h1>
+    <div class="About-container">
+        <div class="About-img">
+            <img class="banar-photo" src="img/ovi-img.jpg" alt="">
+        </div>
+        <div class="About-text">
+            <h1>We grow brands through blod  <br>& strategic creative</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing.</p>
+            <button class="btn">Contract Us</button>
+        </div>
+    </div>
+  </section>
+  <section class="survices-main-container">
+      <h1 class="About-title title">Our Services</h1>
+    <div class="survices-container">
+        <div class="box1">
+        <img class="icon" src="img/icon1.png" alt="">
+        <h2>Web development</h2>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Totam culpa repudiandae odio consequatur harum ratione modi possimus libero ad hic.</p>
+        <button class="btn">Details</button>
+        </div>
+        <div class="box1">
+        <img class="icon" src="img/icon2.png" alt="">
+        <h2>Web development</h2>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Totam culpa repudiandae odio consequatur harum ratione modi possimus libero ad hic.</p>
+        <button class="btn">Details</button>
+        </div>
+        <div class="box1">
+        <img class="icon" src="img/icon3.png" alt="">
+        <h2>Web development</h2>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Totam culpa repudiandae odio consequatur harum ratione modi possimus libero ad hic.</p>
+        <button class="btn">Details</button>
+        </div>
+    </div>
+  </section>
+    </main>
+    <footer class="footer-part">
+        <div class="description-container">
+            <div class="description">
+                <h1>GeekFolio</h1>
+                <p>Auctor blandit dolorem primis eius edit <br>soluta molestie? Malesuada elementum <br>aut doloremque lavo.</p>
+            </div>
+            <div class="description">
+                <h1>Useful Links</h1>
+                <li>About us</li>
+                <li>Careers</li>
+                <li>news & Articiles</li>
+                <li>legal Notice</li>
+            </div>
+            <div class="description">
+                <h1>Supports</h1>
+                <li>Contact Us </li>
+                <li>FAQ</li>
+                <li>Parant Community</li>
+            </div>
+            <div class="description">
+                <h1>Contact Information</h1>
+                <p>Feel free to contact A reach us!! <br>3557 Derek Drive, Orlando, Florida <br> +1(456)657-887 <br>info@domain.com</p>
+                
+            </div>
+        </div>
+        <div class="para">
+
+            <hr>
+            <p class="footer-para">Copyright <i class="fa-solid fa-utensils"></i> 2023 Agence. All rights reserved.</p>
+        </div>
+    </footer>
 </body>
 </html>
